--- a/w1/exploring-data/M1ExploreDataSet-lab.ipynb
+++ b/w1/exploring-data/M1ExploreDataSet-lab.ipynb
@@ -360,6 +360,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Age\"].dtype"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
